<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encuesta">

    <TextView
        android:id="@+id/twP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/twP2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etR1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/twE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:text="@string/twb"
        app:layout_constraintEnd_toStartOf="@+id/twusuario"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/twusuario"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        app:layout_constraintEnd_toEndOf="@+id/twP1"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/twP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/twP1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twusuario" />

    <EditText
        android:id="@+id/etR1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/twP1"
        app:layout_constraintTop_toBottomOf="@+id/twP1" />

    <CheckBox
        android:id="@+id/cBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="19dp"
        android:text="@string/cb1"
        app:layout_constraintStart_toStartOf="@+id/twP2"
        app:layout_constraintTop_toBottomOf="@+id/twP2" />

    <CheckBox
        android:id="@+id/cBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        app:layout_constraintStart_toStartOf="@+id/cBox1"
        app:layout_constraintTop_toBottomOf="@+id/cBox1" />

    <CheckBox
        android:id="@+id/cBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb3"
        app:layout_constraintStart_toStartOf="@+id/cBox2"
        app:layout_constraintTop_toBottomOf="@+id/cBox2" />

    <TextView
        android:id="@+id/twP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/twP3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBox3" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="92dp"
        android:layout_height="58dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnResumen"
        app:layout_constraintEnd_toStartOf="@+id/btnResumen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twP3">

        <RadioButton
            android:id="@+id/rbSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />
    </RadioGroup>

    <Button
        android:id="@+id/btnResumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:onClick="pasar_datos"
        android:text="@string/btnR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>