<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/twB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:text="@string/twb"
        app:layout_constraintBaseline_toBaselineOf="@+id/twnamer"
        app:layout_constraintStart_toStartOf="@+id/twSol" />

    <TextView
        android:id="@+id/twnamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/twB"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/twSol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/twSol"
        app:layout_constraintStart_toStartOf="@+id/twPini"
        app:layout_constraintTop_toBottomOf="@+id/twB" />

    <TextView
        android:id="@+id/twPini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/twPini"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPini"
        app:layout_constraintEnd_toStartOf="@+id/etPini" />

    <TextView
        android:id="@+id/twPmensual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/twPmensual"
        app:layout_constraintEnd_toStartOf="@+id/etPmensual"
        app:layout_constraintTop_toBottomOf="@+id/etPini" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:onClick="calcular"
        android:text="@string/btnCalular"
        app:layout_constraintEnd_toStartOf="@+id/btnguardar"
        app:layout_constraintTop_toBottomOf="@+id/etPmensual" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:onClick="Guardar"
        android:text="@string/btnGuardar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn"
        app:layout_constraintStart_toStartOf="@+id/etPmensual" />

    <EditText
        android:id="@+id/etSol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twnamer" />

    <EditText
        android:id="@+id/etPini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSol" />

    <EditText
        android:id="@+id/etPmensual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/twPmensual"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>