<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/twName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_alignParentLeft="false"
        android:text="@string/twname" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_alignRight="@id/imageView1"
        android:layout_centerHorizontal="false"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/twPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etname"
        android:layout_alignParentLeft="true"
        android:text="@string/twpass" />

    <EditText
        android:id="@+id/etpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etname"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etpass"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:onClick="enviar_usr"
        android:text="@string/btnentrar" />


</RelativeLayout>